k8s/notification-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-worker
  namespace: mini-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-worker
  template:
    metadata:
      labels:
        app: notification-worker
    spec:
      containers:
        - name: notification-worker
          image: amansingh21/mini-order-backend:schema-v3
          imagePullPolicy: IfNotPresent
          command: ["node", "src/notification-worker.js"]
